force-app/main/default/objects/Bonus_Commission_Credit__c/Bonus_Commission_Credit__c.object-meta.xml
<CustomObject>
    <description>Used to calculate and report on the Bonus &amp; Commissions for a corresponding Sales Credit. Using a different object for Sharing visibility. Sales Reps should be able to see each others Sales Credits but not each others Bonus &amp; Commission Credits.</description>
    <label>Bonus &amp; Commission Credit</label>
    <nameField>
        <displayFormat>BCC-{000000}</displayFormat>
        <label>Bonus &amp; Commission Credit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus &amp; Commission Credits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>