force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Actual_Bonus_Commission_Credit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bonus_Commission_Credit__c</fullName>
    <description>Field from Sales Target.  Displayed here for sharing visibility.</description>
    <formula>Sales_Credit__r.Actual_Bonus_Commission_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Bonus Commission Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>