force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Actual_Spiff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spiff_Amount__c</fullName>
    <formula>Sales_Credit__r.Actual_Spiff_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Spiff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>