force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Bonus_Commission__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related Bonus &amp; Commission record for the Bonus &amp; Commission Credit</description>
    <label>Bonus &amp; Commission</label>
    <referenceTo>Bonus_Commission__c</referenceTo>
    <relationshipLabel>Bonus &amp; Commission Credits</relationshipLabel>
    <relationshipName>Bonus_Commission_Credits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>