force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Bonus_Commission_Amount_Paid2__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission_Amount_Paid2__c</fullName>
    <formula>Sales_Credit__r.Bonus_Commission_Amount_Paid2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus &amp; Commission Amount Paid2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>