force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Bonus_Commission_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission_Date_Paid__c</fullName>
    <description>Field from Sales Target.  Displayed here for sharing visibility.</description>
    <formula>Sales_Credit__r.Bonus_Commission_Date_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus &amp; Commission Date Paid</label>
    <type>Date</type>
</CustomField>