force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Sales_Credit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Credit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related Sales Credit for the Bonus &amp; Commission Credit</description>
    <label>Sales Credit</label>
    <referenceTo>Sales_Credit__c</referenceTo>
    <relationshipLabel>Bonus &amp; Commission Credits</relationshipLabel>
    <relationshipName>Bonus_Commission_Credits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>