force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Spiff_Date_Paid2__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Date_Paid2__c</fullName>
    <formula>Sales_Credit__r.Spiff_Date_Paid2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spiff Date Paid2</label>
    <type>Date</type>
</CustomField>