force-app/main/default/objects/Bonus_Commission_Credit__c/fields/Spiff_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Date_Paid__c</fullName>
    <formula>Sales_Credit__r.Spiff_Date_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spiff Date Paid</label>
    <type>Date</type>
</CustomField>